--- a/ihm/src/app/pages/admin/admin.component.html
+++ b/ihm/src/app/pages/admin/admin.component.html
@@ -1,3 +1,11 @@
-<p>
-  admin works!
-</p>
+
+<div class="container">
+  <div class="row">
+    <div class="col-9">
+      <app-admin-race></app-admin-race>
+    </div>
+    <div class="col-3">
+      <app-admin-results></app-admin-results>
+    </div>
+  </div>
+</div>
