--- a/ihm/src/app/component/admin-results/admin-results.component.html
+++ b/ihm/src/app/component/admin-results/admin-results.component.html
@@ -1,6 +1,6 @@
 <div>
   <h3>Compteurs</h3>
-  <p> Affiché : {{affiche}}</p>
+  <p> Affiché : {{compteur}}</p>
   <p> Réel : {{reel}}</p>
   <p> Retention : {{retention}}</p>
 
