--- a/ihm/src/app/pages/board/board.component.html
+++ b/ihm/src/app/pages/board/board.component.html
@@ -1,3 +1,13 @@
-<p>
-  board works!
-</p>
+<app-board-results></app-board-results>
+
+<div class="container">
+  <div class="row">
+    <div class="col-9">
+      <app-board-race></app-board-race>
+    </div>
+    <div class="col-3">
+      <app-board-hall></app-board-hall>
+    </div>
+  </div>
+</div>
+
