--- a/ihm/src/app/component/runner-item/runner-item.component.html
+++ b/ihm/src/app/component/runner-item/runner-item.component.html
@@ -3,10 +3,10 @@
        [ngClass]="{'alert-success':isWaiting(), 'alert-info':isRunning()}"
        role="alert">
     <div>
-      <h5 *ngIf="isRunning()">{{runner.pilot}}</h5>
+      <h5 *ngIf="isRunning()">Ligne {{runner.lane}} - {{runner.pilot.nom || "Anonyme"}}</h5>
       <input *ngIf="isWaiting()" [(ngModel)]="runner.pilot" />
     </div>
-    <div class="d-flex align-items-center">
+    <div class="d-flex align-items-center" *ngIf="isRead()">
       <button *ngIf="isRunning()"
               class="btn btn-lg active"
               [ngClass]="btn-info"
@@ -19,6 +19,9 @@
         <span *ngIf="isRunning()">Stop</span>
         <span *ngIf="isWaiting()">Start</span>
       </button>
+    </div>
+    <div class="d-flex align-items-center" *ngIf="!isRead()">
+      <h5>{{runner.nbTour}} tours  / {{runner.distance | number:'1.0-0'}} km</h5>
     </div>
   </div>
 </div>
